@@ -4,7 +4,7 @@ AM_MAINTAINER_MODE
 
 AC_CONFIG_HEADERS(config.h)
 
-PLUGINVERSION=0.2
+PLUGINVERSION=0.3pre1
 AM_INIT_AUTOMAKE(rssyl, $PLUGINVERSION, no-define)
 
 AC_PROG_CC
